inline css (ugh) to fix issue with table height since flexible height plugin doesn’t seem to wrk

--- a/views/home.html
+++ b/views/home.html
@@ -1,5 +1,1 @@
-<div class="jumbotron text-center">
-    <h1>Home Page</h1>
-
-    <div ng-grid="myOptions"></p>
-</div>
+<div ng-grid="gridOptions" style="height:50vh"></p>
