--- a/views/edit.html
+++ b/views/edit.html
@@ -1,5 +1,10 @@
 <div class="jumbotron text-center">
     <h1>Edit Page</h1>
 
-    <p>{{ message }}</p>
+    <form>
+      <input type="text" placeholder="Name">
+      <input type="text" placeholder="Description">
+      <input type="submit" value="Ok">
+    </form>
+
 </div>
