Editing and deleting grid items works.

--- a/views/home.html
+++ b/views/home.html
@@ -1,1 +1,5 @@
-<div ng-grid="gridOptions" style="height:50vh"></p>
+<div >
+    <h1 class="text-center">50 Tools Every Man Should Own</h1>
+
+    <div ng-grid="gridOptions" style="height:50vh"></p>
+</div>
