--- a/views/edit.html
+++ b/views/edit.html
@@ -1,10 +1,17 @@
 <div class="jumbotron text-center">
     <h1>Edit Page</h1>
 
-    <form>
-      <input type="text" placeholder="Name">
-      <input type="text" placeholder="Description">
-      <input type="submit" value="Ok">
+    <form name="toolForm">
+      <input type="text" ng-model="tool.name" placeholder="Name">
+      <input type="text" ng-model="tool.description" placeholder="Description">
+
+      <a href="#/" class="btn">Cancel</a>
+      <button ng-click="save()"
+              ng-disabled="isClean() || toolForm.$invalid"
+              class="btn btn-primary">Save</button>
+      <button ng-click="destroy()"
+              ng-show="tool._id"
+              class="btn btn-danger">Delete</button>
     </form>
 
 </div>
