--- a/views/home.html
+++ b/views/home.html
@@ -1,5 +1,7 @@
-<div >
-    <h1 class="text-center">50 Tools Every Man Should Own</h1>
+<div class="container">
+  <div class="text-center">
+    <h1>10 Tools Everyone Should Own</h1>
+    <p>via <a href="https://www.popularmechanics.com/home/tools/reviews/g1760/50-tools-everyone-should-own/?slide=1">Popular Mechanics</a></p>
 
     <div ng-grid="gridOptions" style="height:50vh"></p>
 </div>
