rename save to “go” to match requirements

--- a/views/edit.html
+++ b/views/edit.html
@@ -15,7 +15,7 @@
         <button ng-click="save()"
                 ng-disabled="isClean() || toolForm.$invalid"
                 class="btn btn-primary"
-                tabindex="3"><span class="shortcut">S</span>ave</button>
+                tabindex="3">Ok</button>
 
         <button href="#/"
                 class="btn btn-secondary"
