--- a/views/home.html
+++ b/views/home.html
@@ -2,6 +2,6 @@
   <div class="text-center">
     <h1>10 Tools Everyone Should Own</h1>
     <p>via <a href="https://www.popularmechanics.com/home/tools/reviews/g1760/50-tools-everyone-should-own/?slide=1">Popular Mechanics</a></p>
-
-    <div ng-grid="gridOptions" style="height:50vh"></p>
+  </div>
+  <div ng-grid="gridOptions" style="height:50vh"></div>
 </div>
